[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/Sprites_NPC/bobsleep.png" type="Texture" id=1]
[ext_resource path="res://NPC's/Bob/NPC-Bob.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Bobsleep",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Bob",
"speed": 1.4
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 36.6859
height = 57.8077

[node name="Fiona" type="StaticBody2D" groups=[
"NPCs",
]]
pause_mode = 2
position = Vector2( 1.5874, -1.58737 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.18513, -4.82406 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 16 )
animation = "Bob"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -10.7303, 27.3715 )
scale = Vector2( 2.33109, -1.33337 )
polygon = PoolVector2Array( -14.1009, -0.156071, -14.1009, -8.1108, -13.3426, -15.8004, -9.07983, -17.9608, -1.94022, -18.6714, 1.56173, -18.9068, 9.27487, -19.1439, 23.2096, -14.4746, 22.4513, -8.90628, 23.0579, 1.70003 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1.5874, 28.5732 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.42007, -37.9332 )
shape = SubResource( 17 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
